--- a/XamarinRecyclerTest/XamarinRecyclerTest.csproj
+++ b/XamarinRecyclerTest/XamarinRecyclerTest.csproj
@@ -53,6 +53,9 @@
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Json" />
     <Reference Include="System.Xml" />
@@ -87,6 +90,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="PostAdapter.cs" />
+    <Compile Include="PostList.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
